[package]
name = "blog_os"
version = "0.1.0"
authors = ["Rareș Cosma <rares@getbetter.ro>"]
edition = "2018"

[dependencies]
bootloader = "0.6.4"
volatile = "0.2.3"
spin = "0.4.9"
x86_64 = "0.7.0"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
  "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial", "stdio",
  "-display", "none",
]
# The QEMU isa-debug-exit device will use (code << 1 | 1) as an exit code.
# Our success code is 0x10. Therefore, (0x10 << 1) | 1 == 33
test-success-exit-code = 33
